[package]
name = "messenger-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# GAP: path assumes messenger-core sits alongside primus-net-opt as a sibling
# workspace member (primus-net-opt/Cargo.toml's `[package] name = "messenger"`
# is the crate name — "primus-net-opt" is just the directory/repo name).
# Adjust the path if the actual workspace layout differs.
messenger = { path = "../messenger" }

tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0"
async-trait = "0.1.89"
log = "0.4.29"
sha3 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"